fixed z-index to make personal links reachable

--- a/css/derezzball.css
+++ b/css/derezzball.css
@@ -18,7 +18,7 @@ canvas {
   box-shadow: inset 0px 0px 24px yellow;
   position: relative;
   z-index: 20;
-  cursor: cell;
+  cursor: crosshair;
 }
 
 .title {
@@ -168,6 +168,46 @@ canvas {
   text-shadow: 0px 0px 3px #cbecf5;
 }
 
+.angellist-wrapper {
+  position: absolute;
+  top: 369px;
+  left: 50%;
+  transform: translateX(386px);
+}
+
+.fa-angellist {
+  font-size: 50px;
+  color: #b9eaf6;
+  text-decoration: none;
+  transition: color .24s ease-in-out;
+    -moz-transition: color .24s ease-in-out;
+    -webkit-transition: color .24s ease-in-out;
+  transition: text-shadow .24s ease-in-out;
+    -moz-transition: text-shadow .24s ease-in-out;
+    -webkit-transition: text-shadow .24s ease-in-out;
+  animation: slide-down-glow-3 4.166s;
+    -webkit-animation-name: slide-down-glow-3;
+      -webkit-animation-delay: 0s;
+        -webkit-animation-duration: 4.166s;
+    -moz-animation: slide-down-glow-3 4.166s;
+}
+
+@-webkit-keyframes slide-down-glow-3 {
+  0%   { transform: translate(0%, -888%);  }
+  0%   { opacity: 0;                       }
+  60%  { opacity: 0;                       }
+  61%  { opacity: 1;                       }
+  61%  { color: #b9eaf6;                   }
+  61%  { transform: translate(0%, -338%);  }
+  90%  { transform: translate(0%, 0%);     }
+  90%  { color: yellow;                    }
+}
+
+.fa-angellist:hover {
+  color: yellow;
+  text-shadow: 0px 0px 3px #cbecf5;
+}
+
 .joey {
   font-family: 'Audiowide', cursive;
   text-align: center;
@@ -284,6 +324,7 @@ canvas {
 
 #click-to-start {
   display: block;
+  z-index: -1;
   font-family: 'Audiowide', cursive;
   font-size: 48px;
   color: #b9ecff;
@@ -307,7 +348,7 @@ canvas {
 }
 
 #click-to-reset {
-  z-index: 19;
+  z-index: -1;
   font-family: 'Audiowide', cursive;
   font-size: 48px;
   color: #b9ecff;
@@ -342,6 +383,7 @@ canvas {
 
 #ring-1-wrapper {
   position: absolute;
+  z-index: -1;
   margin-left: auto;
   margin-right: auto;
   width: 893px;
@@ -351,6 +393,7 @@ canvas {
 }
 #ring-2-wrapper {
   position: absolute;
+  z-index: -1;
   margin-left: auto;
   margin-right: auto;
   width: 893px;
@@ -360,6 +403,7 @@ canvas {
 }
 #ring-3-wrapper {
   position: absolute;
+  z-index: -1;
   margin-left: auto;
   margin-right: auto;
   width: 893px;
